--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --exec babel-node ./server/server.js"
+    "dev": "nodemon --exec babel-node ./server/server.js",
+    "start": "node --exec babel-node ./server/server.js"
   },
   "dependencies": {
     "@babel/cli": "^7.18.9",
@@ -24,6 +25,7 @@
     "morgan": "^1.10.0",
     "path": "^0.12.7",
     "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.21.3"
   },
   "devDependencies": {
