--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "license": "MIT",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --exec babel-node ./server/server.js",
-    "start": "node --exec babel-node ./server/server.js"
+    "dev": "nodemon ./server/server.js",
+    "start": "node ./server/server.js"
   },
   "dependencies": {
     "@babel/cli": "^7.18.9",
