--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "author": "Alao-Abiodun <46402042+Alao-Abiodun@users.noreply.github.com>",
   "license": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "cross-env NODE_ENV=test jest --setTimeout=10000",
     "dev": "nodemon ./server/server.js",
-    "start": "node ./server/server.js"
+    "start": "node ./server/server.js",
+    "db:reset": "npx sequelize-cli db:drop && npx sequelize-cli db:create && npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all"
   },
   "dependencies": {
     "@babel/cli": "^7.18.9",
@@ -30,9 +31,12 @@
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.18.9",
+    "cross-env": "^7.0.3",
     "eslint": "^8.20.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "nodemon": "^2.0.19"
+    "jest": "^28.1.3",
+    "nodemon": "^2.0.19",
+    "supertest": "^6.2.4"
   }
 }
